fix(frontend): better handle overflow on kanban cards

--- a/frontend_app_kanban/src/component/KanbanCard.styl
+++ b/frontend_app_kanban/src/component/KanbanCard.styl
@@ -4,13 +4,13 @@ cardWidth = 280px
 
 .kanban
   &__contentpage__wrapper__board__card
-    margin-bottom standardSpacing
     width cardWidth
     background-color offWhite
     border 1px solid
     border-radius standardBorderRadius
     padding standardSpacing
     text-align start
+    overflow auto
     &.buttonHidden
       .kanban_addCard, .dropdown
         display none
